2004-09-18 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/hc08/gen.c (emitinline): fixed bug #1029778
	* src/SDCC.y (assignment_expr): fixed the grammer so that assignment
	to a cast object is no longer a syntax error ("fixes" bug #1030006,
	and starts toward RFE #905167)

2004-09-17 Vangelis Rokas <vrokas AT otenet.gr>

	* src/pic16/gen.c (mov2f): New function to move an operand to
	another without considering if it is a literal or a register,
	* (pic16_sameRegs): don't check if they are both AOP_REG,
	* (AccRsh): removed andmask=0 lines,
	* (genLeftShift): duplicated to be improved in future versions,
	* src/pic16/main.c (_process_pragma): emit stack default size in hex,
	* src/pic16/pcode.c: added POC_INFSNZW, updated inverted_op fields
	in POC_INCFSZ, POC_INCFSZW, POC_INFSNZ,
	* (pic16initMnemonics): added initialization for POC_INFSNZW,
	* (insertBankSwitch): fixed inserting banksel directives algorithm
	for instructions that follow a skip instruction, this fixes a report
	for broken subtraction code generation,
	* src/pic16/ralloc.c (deassignLRs): do not free register if current
	iCode is a left op, just in case result and right share the same
	registers

2004-09-16 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/hc08/main.c,
	* src/hc08/gen.c (genJumpTable): more efficient jump table, supports
	preservation of HX
	* src/hc08/gen.c (pullRegs): fixed order of HX & XA pairs
	* src/mcs51/ralloc.c (packRegisters): removed the patch applied
	on 2004-09-12; it was buggy

2004-09-15 Bernhard Held <bernhard AT bernhardheld.de>

	* src/SDCCsymt.h: removed RESULT_CHECK
	* src/SDCCast.c,
	* src/SDCCglue.c,
	* src/SDCCval.c,
	* src/pic/glue.c,
	* src/pic16/glue.c: replaced RESULT_CHECK with RESULT_TYPE_NONE

2004-09-15 Vangelis Rokas <vrokas AT otenet.gr>

	* src/SDCCicode.c (piCode): applied patch from Raphael Neider,
	* src/pic16/device.c (pic16_assignConfigWordValues): wrong
	configuration values no more rejected by compiler, they are assigned